fixed a layout problem with the 3-dots-vertical for comments on posts and added a focus to textarea elements when editing a post

--- a/css/fetch_posts.css
+++ b/css/fetch_posts.css
@@ -20,6 +20,7 @@
     resize: none !important;
     color: #212529;
     padding: 5px;
+    border-color: #DEE2E6;
 }
 
 .post-textarea:disabled {
